revert primary color

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -38,7 +38,7 @@ $grays: map-merge((
 $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
-$pink: #cc0033 !default;
+$pink: #990033 !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
