--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,20 +1,14 @@
 /*!
- * Bootstrap v4.0.0-beta.2 (https://getbootstrap.com)
- * Copyright 2011-2017 The Bootstrap Authors
- * Copyright 2011-2017 Twitter, Inc.
+ * Bootstrap v4.0.0 (https://getbootstrap.com)
+ * Copyright 2011-2018 The Bootstrap Authors
+ * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
-
-/*
- * customized version for FTI Group projects
- * IMPORTANT: node-sass use an include-path to pick "missing" files from original bootstrap folder
  */
 
 @import "functions";
 @import "variables";
 @import "mixins";
 @import "root";
-@import "print";
 @import "reboot";
 @import "type";
 @import "images";
@@ -45,3 +39,4 @@
 @import "popover";
 @import "carousel";
 @import "utilities";
+@import "print";
