--- a/scss/_dasrick_variables.scss
+++ b/scss/_dasrick_variables.scss
@@ -2,3 +2,7 @@
 
 $pink: #903;
 $primary: $pink;
+
+// stylelint-disable value-keyword-case
+$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Open Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+// stylelint-enable value-keyword-case
